# Tetris

./: .gitignore  CMakeLists.txt  Makefile-2  Makefile-test  README.md  contribution.md  run.bat
Resources/Pictures/: background-2.psd  background.psd  setOfSquares.psd
Source/: ActiveShape.cpp  ActiveShape.hpp  ArrayCell.cpp  ArrayCell.hpp  FigureGenerator.cpp  FigureGenerator.hpp  FigureTypeEnum.hpp  GameArray.cpp  GameArray.hpp  GameController.cpp  GameController.hpp  GameField.cpp  GameField.hpp  ResourceManager.cpp  ResourceManager.hpp  ScreenManager.cpp  ScreenManager.hpp  ScreenTypeEnum.hpp  Settings.cpp  Settings.hpp  ShapeGenerator.cpp  ShapeGenerator.hpp  TetrisFigure.cpp  TetrisFigure.hpp  cScreen.hpp  main.cpp  screenGame.cpp  screenGame.hpp  screenMenu.cpp  screenMenu.hpp  screen_game.hpp  screen_menu.hpp  screens.hpp  td.cpp  test.cpp
Source/Buttons/: Button.cpp  Button.hpp  ButtonList.cpp  ButtonList.hpp  Buttons.cpp  Buttons.hpp  ButtonsList.hpp
Source/GameController/: ArrayCell.cpp  ArrayCell.hpp  FigureGenerator.cpp  FigureGenerator.hpp  GameController.cpp  GameController.hpp  GameField.cpp  GameField.hpp  PlayerStatistics.cpp  PlayerStatistics.hpp  TetrisFigure.cpp  TetrisFigure.hpp
Source/Screens/: ArrayCell.hpp  Backgrounds.cpp  Backgrounds.hpp  GameArray.cpp  GameArray.hpp  ScreenBase.hpp  ScreenGame.cpp  ScreenGame.hpp  ScreenMenu.cpp  ScreenMenu.hpp  ScreenSettings.cpp  ScreenSettings.hpp  Screens.hpp
Source/Screens/ScreenGame/: GameFieldGraphics.cpp  GameFieldGraphics.hpp  ScreenGame.cpp  (+3 more)
Source/Settings/: Settings.cpp  Settings.hpp
(+2 files in other folders)
